--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -49,6 +49,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run linter
-        uses: ludeeus/action-shellcheck@master
-        with:
-          additional_files: run finish discovery
+        uses: ludeeus/action-shellcheck@0.5.0
